# computer-graphic-2014

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate.bat  vcpkg.json
.github/workflows/: build-windows.yml
doc/: cg-project-report.docx
include/: CGLabmain.hpp  CGProject.h  CGProject.hpp
src/: CGLabmain.cpp  CGLabmain.h  CGProject.cpp
